5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1822_3183.log
== TEST (2019-06-13 11:18:02) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros"))

for i in range(size(n//2)):
	j = size(n) -i -1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(aux)
-- ERROR:
File "XXXX", line 5
    for i in range(size(n//2)):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:18:08) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros"))

for i in range(size(n//2))
	j = size(n) -i -1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(aux)
-- ERROR:
File "XXXX", line 6
    j = size(n) -i -1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:19:20) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros"))
n1 = n//2
for i in range(size(n1)):
	j = size(n) -i -1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(aux)
-- ERROR:
File "XXXX", line 4
    n1 = n//2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:02) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros")))
d = zeros(size(n))
n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = d[i]
	d[i] = d[i]
	d[i] = d[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:07) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros")))
d = zeros(size(n))
n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = d[i]
	d[i] = d[i]
	d[i] = d[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:32) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros")))
d = zeros(size(n))
n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = d[i]
	d[i] = d[i]
	d[i] = d[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
d = zeros(size(n))
n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = d[i]
	d[i] = n[j]
	n[j] = d[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
d = zeros(size(n))
n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = d[i]
	d[i] = n[j]
	n[j] = d[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
d = zeros(size(n))
n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = d[i]
	d[i] = n[j]
	n[j] = d[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
d = zeros(size(n))
n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = d[i]
	d[i] = n[j]
	n[j] = d[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
d = zeros(size(n))
n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = d[i]
	d[i] = n[j]
	n[j] = d[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
d = zeros(size(n))
n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = d[i]
	d[i] = n[j]
	n[j] = d[i]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:27:12) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = d[i]
	d[i] = n[j]
	n[j] = d[i]
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:27:41) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:27:58) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:28:16) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:28:29) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:28:47) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:28:54) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:29:00) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:29:12) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1+1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:29:37) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:30:09) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)
-- EXECUTION TIME:
0.966434
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[ 7 19 18 17 10  9  8 20]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[3 6 6 5 5 5 4 4 4 3 3 6]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
[-3  3  2  1  0 -1 -2  4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:30:12) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:30:42) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n1)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:31:18) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:31:26) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)
-- EXECUTION TIME:
0.852449
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[20 19 18 17 10  9  8  7]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[6 6 6 5 5 5 4 4 4 3 3 3]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
[ 4  3  2  1  0 -1 -2 -3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:31:33) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

n1 = size(n)//2
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)
-- EXECUTION TIME:
0.961478
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[20 19 18 17 10  9  8  7]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[6 6 6 5 5 5 4 4 4 3 3 3]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
[ 4  3  2  1  0 -1 -2 -3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:31:37) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)
-- EXECUTION TIME:
0.94349
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[20 19 18 17 10  9  8  7]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[6 6 6 5 5 5 4 4 4 3 3 3]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
[ 4  3  2  1  0 -1 -2 -3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:31:40) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:31:58) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:39) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:49) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:04) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:33:13) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)

-- EXECUTION TIME:
0.880783
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[20 19 18 17 10  9  8  7]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[6 6 6 5 5 5 4 4 4 3 3 3]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
[ 4  3  2  1  0 -1 -2 -3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:19) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:26) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:39) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:45) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:59) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:34:22) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:35:28) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:35:35) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:35:52) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(j)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:36:01) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))


for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:31) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:43) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:49) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:40:09) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:41:04) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:31) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[j]
	n[j] = n[i]
	n[i] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:43:06) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:44:10) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(i)
	print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:44:18) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(i)
	print(j)
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:44:41) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:44:51) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:44:59) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:45:08) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:45:28) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:45:55) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:45:56) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))

for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- EXECUTION TIME:
1.09188
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[ 7 19 18 17 10  9  8 20]
[ 7  8 18 17 10  9 19 20]
[ 7  8  9 17 10 18 19 20]
[ 7  8  9 10 17 18 19 20]
[ 7  8  9 17 10 18 19 20]
[ 7  8 18 17 10  9 19 20]
[ 7 19 18 17 10  9  8 20]
[20 19 18 17 10  9  8  7]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[3 6 6 5 5 5 4 4 4 3 3 6]
[3 3 6 5 5 5 4 4 4 3 6 6]
[3 3 3 5 5 5 4 4 4 6 6 6]
[3 3 3 4 5 5 4 4 5 6 6 6]
[3 3 3 4 4 5 4 5 5 6 6 6]
[3 3 3 4 4 4 5 5 5 6 6 6]
[3 3 3 4 4 5 4 5 5 6 6 6]
[3 3 3 4 5 5 4 4 5 6 6 6]
[3 3 3 5 5 5 4 4 4 6 6 6]
[3 3 6 5 5 5 4 4 4 3 6 6]
[3 6 6 5 5 5 4 4 4 3 3 6]
[6 6 6 5 5 5 4 4 4 3 3 3]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
Numeros:[-3  3  2  1  0 -1 -2  4]
[-3 -2  2  1  0 -1  3  4]
[-3 -2 -1  1  0  2  3  4]
[-3 -2 -1  0  1  2  3  4]
[-3 -2 -1  1  0  2  3  4]
[-3 -2  2  1  0 -1  3  4]
[-3  3  2  1  0 -1 -2  4]
[ 4  3  2  1  0 -1 -2 -3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:02) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:14) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:22) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:38) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:46) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:58) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:06) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:19) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:48) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:48) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:48) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:54) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:48:06) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:48:18) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:48:25) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:48:34) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(i)
	print(j)
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:48:47) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:48:51) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:49:05) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(i)
	print(j)
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:49:38) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(aux)
	print(i)
	print(j)
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:49:58) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(aux)
	print(i)
	print(j)
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:49:58) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(aux)
	print(i)
	print(j)
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:49:58) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(aux)
	print(i)
	print(j)
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:04) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(aux)
	print(i)
	print(j)
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:52:22) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:52:30) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:52:46) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:53:08) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:53:25) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n
-- ERROR:
File "XXXX", line 10
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:53:29) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-i-1
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:53:53) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:54:24) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:54:31) 
-- CODE:
from numpy import*

n = array(eval(input("Numeros:")))
for i in range(size(n//2)):
	j = size(n)-1-i
	aux = n[i]
	n[i] = n[j]
	n[j] = aux
print(n)
-- EXECUTION TIME:
0.806753
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[20 19 18 17 10  9  8  7]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[6 6 6 5 5 5 4 4 4 3 3 3]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
[ 4  3  2  1  0 -1 -2 -3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
